<resources>
    <string name="app_name">Green Circle</string>
    <string name="eco_info">Eco Info</string>
    <string name="proveedores">Proveedores</string>
    <string name="mapa">Mapa</string>
    <string name="perfil">Perfil</string>
    <string name="Cerrar_sesion">Cerrar sesion</string>
    <string name="favourites_user">Favoritos (</string>
    <string name="review_nested_scroll_desc">Scrollable content</string>
    <string name="review_opinions_count">%d opiniones</string>
    <string name="review_form_title">Comparte tu opinión</string>
    <string name="review_rating_bar_label">¿Cómo calificarías la atención y servicio del proveedor?</string>
    <string name="review_bad_rating_title">Malo</string>
    <string name="review_excellent_rating_title">Excelente</string>
    <string name="review_title_label">Escribe un título para tu opinión</string>
    <string name="review_opinion_label">Escribe tu opinión</string>
    <string name="review_publish_botton_label">Publicar</string>
    <string name="review_rate_action_title">Califica al proveedor</string>
    <string name="review_rate_description">Comparte tu opinión sobre este proveedor</string>
    <string name="review_rate_button">Escribe una opinión</string>
    <string name="review_opinions_title">Opiniones del proveedor</string>
    <string name="review_error_rating_message">Selecciona una clasificación antes de publicar tu reseña</string>
    <string name="review_comment_section_title">Escribe una opinión</string>
    <string name="review_comment_section_optional">(Opcional)</string>
    <string name="review_comment_section_desc">Tus comentarios ayudan a otros usuarios a conocer mejor a un proveedor</string>
    <string name="review_submit_toast">Tu reseña se ha registrado exitosamente</string>
    <string name="update_review_submit_toast">Tu reseña se ha actualizado exitosamente</string>
    <string name="no_reviews_to_display">No hay reseñas para este proveedor ¡Sé el primero en escribir una!</string>
    <string name="no_review_form_review_error">Ingresa una opinión</string>
    <string name="no_title_form_review_error">Ingresa un título para la opinión</string>
    <string name="review_initial_rating">0.0</string>
    <string name="review_initial_opinions_number">0 opiniones</string>
    <string name="servicios">Servicios</string>
    <string name="contacto">Contacto</string>
    <string name="rese_as">Reseñas</string>
    <string name="review_submit_error">Hubo un error al publicar la review. Por favor intenta de nuevo más tarde</string>
    <string name="review_placeholder_user">User</string>
    <string name="review_placeholder_date">Date</string>
    <string name="review_placeholder_title">Title</string>
    <string name="review_placeholder_review">Review</string>
    <string name="reviews_written_user">Reseñas Escritas (</string>
    <string name="user_review_empty_view">No has escrito ninguna reseña</string>
    <string name="user_favourite_empty_view">No has agregado proveedores como favoritos</string>
    <string name="select_problem_prompt">Selecciona el problema</string>
    <string name="title_upload_docs">Subir documentos</string>
    <string name="desc_upload_docs">Para poder validar tu empresa, te pedimos puedas compartir con nosotros los siguientes documentos</string>
    <string name="app_logo">App logo</string>
    <string name="arrow_back">arrow_back</string>
    <string name="id_legal_title">INE representante legal</string>
    <string name="file_size_desc">Hasta 50 MB por archivo y en .pdf</string>
    <string name="constitutive_title">Acta constitutiva</string>
    <string name="title_curriculum">Subir tu curriculum</string>
    <string name="curriculum_desc">Este archivo deberá de incluir:</string>
    <string name="curriculum_desc_list"><li>Presentación curricular (documento)</li>
        \n<li>Listado de productos y servicios a ofrecer</li>
        \n<li>Constancia de 5 proyectos verificables realizados con la tecnología ofertada</li>
    </string>
    <string name="curriculum_upload_title">Curriculum</string>
    <string name="certifications_title">Sube tus certificaciones (Opcional)</string>
    <string name="certifications_desc">En caso de contar con alguno de los siguientes documentos, por favor compártelo con nosotros</string>
    <string name="comprobante_certificados_de_la_cdmx">Comprobante Directorio de Instaladores Certificados de la CDMX</string>
    <string name="fide_title">Comprobante Padrón de Empresas Especializadas FIDE</string>
    <string name="services">Servicios</string>
    <string name="services_desc">Sube únicamente los documentos de los servicios que ofrece tu empresa</string>
    <string name="sistemas_photovoltaics">Sistemas fotovoltaicos</string>
    <string name="services_docs_desc">Por favor, comparte con nosotros un documento que incluya las siguientes certificaciones</string>
    <string name="fotovolaticos_desc_list"><li>EC0586.01 Instalación de sistemas photovoltaics en residencias, comercios e industrias</li>
        \n<li>EC1180 Asesoría técnica- comercial en proyectos de generación distribuida fotovoltaica</li>
        \n<li>EC1181 Supervisión de sistemas fotovoltaicos en residencia, comercio e industria</li>
    </string>
    <string name="photovoltaics_upload_title">Certificaciones Sistemas Fotovoltaicos</string>
    <string name="calentadores_solares">Calentadores solares</string>
    <string name="calentadores_desc_list"><li>NMX-ES-001-2005</li>
        \n<li>ISO 9806 + Informe de pruebas de laboratorio</li>
        \n<li>EC-0325 “Instalación de sistema de calentamiento solar de agua termosifónico en vivienda sustentable</li>
        \n<li>EC-0473 “Instalación del sistema de calentamiento solar de agua de circulación forzada con termotanque</li>
    </string>
    <string name="calentadores_side_text">Además, selecciona la presión de tu sistema e incluye en el <b>mismo documento</b>, la siguiente información correspondiente.</string>
    <string name="calentadores_upload_title_more_than_294">Presión Mayor a 294 kPa</string>
    <string name="calentadores_upload_desc_more_than_294"><li>NOM-027-ENER/SCH-2018</li>
            \n<li>NMX-ES-004-NORMEX-2015</li>
        \n<li>DTESTV + Informe de pruebas de laboratorio</li>
    </string>
    <string name="calentadores_upload_title_less_than_294">Presión Menor a 294 kPa</string>
    <string name="calentadores_upload_desc_less_than_294"><li>5 proyectos verificables con antigüedad mayor a 5 años (descripción, contratos, fotografías)</li>
        \n<li>Proporcionar datos para facilitar la comprobación de dichas instalaciones</li>
    </string>
    <string name="commitment_letter_title">Firmar carta compromiso</string>
    <string name="commitment_letter_desc">Para terminar tu registro, te pedimos puedas firmar una carta compromiso de seguridad y garantía, la cual debe contener:</string>
    <string name="commitment_letter_desc_bullet"><li>Garantía por escrito de 5 años contra defectos de fabricación y 1 año contra defectos en la instalación</li>
        \n<li>Programa de mantenimiento por los siguientes 5 años</li>
        \n<li>Manual de operación para usuario final</li>
        \n<li>Elementos de operación y seguridad: jarro de aire, válvula anti-retorno, by-pass</li>
    </string>
    <string name="arrow_right">Arrow right</string>
    <string name="commitment_upload_title">Carta compromiso</string>
    <string name="privacy_agreement_accept">Acepto las <u>políticas de privacidad</u></string>
    <string name="conditions_agreement_accept">Acepto los <u>términos y condiciones</u></string>
    <string name="enroll_company_button_txt">Finalizar registro</string>
    <string name="next">Siguiente</string>
    <string name="continue_no_documents">Continuar sin subir documentos</string>
    <string name="upload">Subir</string>
    <string name="cancel">Cancelar</string>
    <string name="change_file">Da clic para cambiar el archivo</string>
    <string name="check">Check</string>
    <string name="chevron">Chevron</string>
    <string-array name="options_array">
        <item>Productos Defectuosos</item>
        <item>Inconformidad con el producto / servicio</item>
        <item>Comportamiento Inapropiado</item>
        <item>Mal Servicio</item>
        <item>Fraudes o estafas</item>
        <item>Violación legal o ética</item>
    </string-array>
    <string name="upload_all_documents">Por favor, sube todos los documentos solicitados antes de continuar</string>
    <string name="accept_tc_and_privacy">Por favor, acepta las políticas de privacidad y los términos y condiciones para continuar</string>
    <string name="favourites_user">Favoritos (</string>
    <string name="user_favourite_empty_view">No has agregado proveedores como favoritos</string>
    <string name="error_message">Ha ocurrido un error, por favor intenta mas tarde.</string>
    <string name="select_rating_prompt">Selecciona una calificación</string>
    <string name="select_product_prompt">Selecciona un producto</string>
    <string name="select_state_prompt">Selecciona un estado</string>
</resources>