<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="600dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/submit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start"
            android:text="@string/commitment_letter_title"
            android:textColor="@color/gray_900"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/commitment_letter_desc"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/commitment_letter_desc_bullet"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/submit_docs_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submit_title">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:background="@color/gray_300" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/commitment_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:paddingVertical="20dp">

            <TextView
                android:id="@+id/commitment_upload_title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/commitment_upload_title"
                android:textColor="@color/green"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="7dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/file_size_desc"
                android:textColor="@color/gray_500"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/commitment_upload_title" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/ic_chevron_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_300" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/privacy_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="start"
        android:paddingHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@+id/submit_docs_layout">

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/privacy_agreement_switch"
            style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="false"
            app:thumbIcon="@drawable/baseline_check_24"
            app:thumbIconTint="@color/white"
            app:thumbTint="@color/white"
            app:trackTint="@color/gray_500" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:text="@string/privacy_agreement_accept"
            android:textColor="@color/gray_900"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/conditions_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:paddingHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@+id/privacy_agreement">

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/conditions_agreement_switch"
            style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="false"
            app:thumbIcon="@drawable/baseline_check_24"
            app:thumbIconTint="@color/white"
            app:thumbTint="@color/white"
            app:trackTint="@color/gray_500" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:text="@string/conditions_agreement_accept"
            android:textColor="@color/gray_900"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/submit_enroll_company_button"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/enroll_company_button_txt"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:backgroundTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conditions_agreement"
        app:rippleColor="@color/primary_700" />

</androidx.constraintlayout.widget.ConstraintLayout>