<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/arrow_back"
                android:src="@drawable/ic_chevron_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/icon_leaf"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/screen_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            app:layout_constraintTop_toBottomOf="@+id/topbar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start"
                android:text="@string/title_upload_docs"
                android:textColor="@color/gray_900"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/desc_upload_docs"
                android:textColor="@color/gray_900"
                android:textSize="16sp" />

        </LinearLayout>

        <include
            android:id="@+id/section_id"
            layout="@layout/company_docs_section_id" />

        <include
            android:id="@+id/section_curriculum"
            layout="@layout/company_docs_section_curriculum" />

        <include
            android:id="@+id/section_certifications"
            layout="@layout/company_docs_section_certifications" />

        <LinearLayout
            android:id="@+id/services_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            app:layout_constraintTop_toBottomOf="@+id/section_certifications">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start"
                android:text="@string/services"
                android:textColor="@color/gray_900"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/services_desc"
                android:textColor="@color/gray_900"
                android:textSize="16sp" />

        </LinearLayout>

        <include
            android:id="@+id/section_services"
            layout="@layout/company_docs_section_services" />

        <include
            android:id="@+id/section_commitment_letter"
            layout="@layout/company_docs_section_commitment_letter" />


        <LinearLayout
            android:id="@+id/privacy_agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="start"
            android:paddingHorizontal="30dp"
            app:layout_constraintTop_toBottomOf="@+id/section_commitment_letter">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/privacy_agreement_switch"
                style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="false"
                app:thumbIcon="@drawable/baseline_check_24"
                app:thumbIconTint="@color/white"
                app:thumbTint="@color/white"
                app:trackTint="@color/gray_500" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:text="@string/privacy_agreement_accept"
                android:textColor="@color/gray_900"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/conditions_agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:paddingHorizontal="30dp"
            app:layout_constraintTop_toBottomOf="@+id/privacy_agreement">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/conditions_agreement_switch"
                style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="false"
                app:thumbIcon="@drawable/baseline_check_24"
                app:thumbIconTint="@color/white"
                app:thumbTint="@color/white"
                app:trackTint="@color/gray_500" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:text="@string/conditions_agreement_accept"
                android:textColor="@color/gray_900"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/submit_enroll_company_button"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/enroll_company_button_txt"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:backgroundTint="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/conditions_agreement"
            app:rippleColor="@color/primary_700"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>