<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/section_curriculum">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:paddingHorizontal="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start"
            android:text="@string/certifications_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/certifications_desc"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="30dp"
        android:background="@color/gray_300" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dir_instaladores_cdmx_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:paddingVertical="20dp">

        <TextView
            android:id="@+id/dir_cdmx_upload_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="0dp"
            android:paddingEnd="60dp"
            android:text="@string/comprobante_certificados_de_la_cdmx"
            android:textColor="@color/green"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="7dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/file_size_desc"
            android:textColor="@color/gray_500"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dir_cdmx_upload_title" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:contentDescription="@string/arrow_right"
            android:src="@drawable/ic_chevron_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_300" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fide_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:paddingVertical="20dp">

        <TextView
            android:id="@+id/fide_upload_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="0dp"
            android:paddingEnd="60dp"
            android:text="@string/fide_title"
            android:textColor="@color/green"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="7dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/file_size_desc"
            android:textColor="@color/gray_500"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fide_upload_title" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:contentDescription="@string/arrow_right"
            android:src="@drawable/ic_chevron_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_300" />
</LinearLayout>